--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "diskunit.h": "c",
         "cal": "cpp",
-        "path.h": "c"
+        "path.h": "c",
+        "bitset": "c",
+        "unordered_map": "c"
     }
 }
